system/cms/themes/pyrocms/css/workless/workless.css
/* ... */
.btn:disabled {
  background-color: #bbbbbb!important;
  background-repeat: repeat-x!important;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#cccccc), to(#bbbbbb))!important;
  background-image: -moz-linear-gradient(#cccccc, #bbbbbb)!important;
  background-image: -ms-linear-gradient(#cccccc, #bbbbbb)!important;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #cccccc), color-stop(100%, #bbbbbb))!important;
  background-image: -webkit-linear-gradient(#cccccc, #bbbbbb)!important;
  background-image: -o-linear-gradient(#cccccc, #bbbbbb)!important;
  background-image: linear-gradient(#cccccc, #bbbbbb)!important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)!important;
  border: 1px solid #aaaaaa!important;
}

a.button {
	padding-top: 2px;
}

.cancel { padding: 3px 10px 4px 10px; }

.button:hover,
.cancel:hover,
button:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
input[type="button"]:hover {
  background: #ffffff;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#dddddd), to(#ffffff));
  background-image: -moz-linear-gradient(#dddddd, #ffffff);
  background-image: -ms-linear-gradient(#dddddd, #ffffff);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
  background-image: -webkit-linear-gradient(#dddddd, #ffffff);
  background-image: -o-linear-gradient(#dddddd, #ffffff);
  background-image: linear-gradient(#dddddd, #ffffff);
  border: 1px solid;
  border-color: #999999 #bbbbbb #dddddd;
  -webkit-transition: 250ms linear all;
  -moz-transition: 250ms linear all;
  transition: 250ms linear all;
  color: #000;
}

input[type="text"],
input[type="password"],
input[type="file"],
textarea {
	background: #f1f1f1;
	padding: 8px;
	border: 1px solid #d9d9d9;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

textarea {
	width: 98%;
	min-height: 100px;
}

input.error {
	border: 5px solid #ff0000;
	border: 5px solid rgba(255, 0, 0, .5);
}

/* Colors for form validity */
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

.required-icon {
	color: red!important;
	display: block-inline;
}

/* Form UL Structure */

.form_inputs {
	width: 100%;
	overflow: hidden;
}
.move-handle {display: none;}
.form_inputs fieldset {
	width: 250px;
}
.form_inputs fieldset > ul,
.form_inputs > ul {
	width: 100%;
	height: 100%;
	margin-bottom: 0;
	padding-bottom: 0;
}
.form_inputs fieldset > ul > li,
.form_inputs > ul > div > li,
.form_inputs fieldset > ul > div > li,
.form_inputs > ul > li {
	float: left;
	width: 100%;
	border-bottom: 1px solid #efefef;
	padding-bottom: 10px;
	margin-bottom: 10px;
}
.form_inputs > ul > div > li:last-child,
.form_inputs fieldset > ul > li:last-child,
.form_inputs > ul > li:last-child {
	border-bottom: none!important;
}
.form_inputs fieldset > ul > li > label,
.form_inputs fieldset > ul > div > li > label,
.form_inputs > ul > div > li > label,
.form_inputs > ul > li > label,
.form_inputs fieldset > ul > li .label,
.form_inputs > ul > li .label {
	width: 90%!important;
	float: left;
	text-align: left;
	margin: 0 3% 0 0;
	padding: 8px;
}
.form_inputs fieldset > ul > li > label span,
.form_inputs > ul > li > label span {
	color: red;
}
.form_inputs .input {
	float: left!important;
	padding-left: 10px;
	width: 67%;
}
.form_inputs .input > input {
	color: #666;
	min-width: 210px!important;
}
.form_inputs label small {
	display: block;
	font-weight: normal;
	font-style: italic;
	font-size: 11px;
	color: #aaa;
}
.form_inputs input:focus,
.form_inputs textarea:focus {
	color: #4D4D4D;
	outline: none;
	border-color: #ed8e28;
}
.form_inputs .datetime_input select {
	width:  100px;
}

/* ----------------------------------
 *   Tables
 * ---------------------------------- */
table {
  width: 113%;
  margin: -16px;
  margin-bottom: 18px;
  padding: 0;
  border-collapse: collapse;
  font-size: 11px;
}

table th, table td {
  padding: 10px 10px 9px;
  line-height: 13.5px;
  text-align: left;
  vertical-align: middle;
}

table th.collapse, table td.collapse {
	display: none;
}

table th {
  padding-top: 9px;
  font-weight: bold;
  border-bottom-width: 2px;
}

.zebra-striped tbody tr:nth-child(odd) td {
  background-color: #f9f9f9;
}

.zebra-striped tbody tr:hover td {
  background-color: #f5f5f5;
}

.zebra-striped .header {
  cursor: pointer;
}

.zebra-striped .header:after {
  content: "";
  float: right;
  margin-top: 7px;
  border-width: 0 4px 4px;
  border-style: solid;
  border-color: #000 transparent;
  visibility: hidden;
}

.zebra-striped .headerSortUp, .zebra-striped .headerSortDown {
  background-color: rgba(141, 192, 219, 0.25);
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  -webkit-border-radius: 3px 3px 0 0;
  -moz-border-radius: 3px 3px 0 0;
  border-radius: 3px 3px 0 0;
}

.zebra-striped .header:hover:after {
  visibility: visible;
}

.zebra-striped .headerSortDown:after, .zebra-striped .headerSortDown:hover:after {
  visibility: visible;
  filter: alpha(opacity=60);
  -khtml-opacity: 0.6;
  -moz-opacity: 0.6;
  opacity: 0.6;
}

.zebra-striped .headerSortUp:after {
  border-bottom: none;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #000;
  visibility: visible;
  -webkit-grid-shadow: none;
  -moz-grid-shadow: none;
  grid-shadow: none;
  filter: alpha(opacity=60);
  -khtml-opacity: 0.6;
  -moz-opacity: 0.6;
  opacity: 0.6;
}

table .blue {
  color: #049cdb;
  border-bottom-color: #049cdb;
}

table .headerSortUp.blue, table .headerSortDown.blue {
  background-color: #ade6fe;
}

table .green {
  color: #46a546;
  border-bottom-color: #46a546;
}

table .headerSortUp.green, table .headerSortDown.green {
  background-color: #cdeacd;
}

table .red {
  color: #9d261d;
  border-bottom-color: #9d261d;
}

table .headerSortUp.red, table .headerSortDown.red {
  background-color: #f4c8c5;
}
/* ... */

